# sdftoy

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  sdftoy.sublime-project  sdftoy.sublime-workspace  shadergen.py  shaders.cpp  shaders.h
gen-glad/include/glad/: glad.h
gen-glad/src/: glad.c
shaders/fragment/: red.glsl  screen_uv_color.glsl  shadertoy_interface.glsl
shaders/shadertoy/: hello_world.glsl  primitives.glsl  seascape.glsl
shaders/vertex/: passthrough.glsl
